# lucid

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  aabb_8hpp.html  aabb_8hpp.js  aabb_8hpp_source.html  annotated.html  annotated_dup.js  argparse_8hpp.html  argparse_8hpp.js  argparse_8hpp_source.html  argparser_8cpp.html  argparser_8cpp.js  base_2transforms_8hpp.html  base_2transforms_8hpp.js  basic_8hpp.html  basic_8hpp_source.html  benchmark_8hpp.html  benchmark_8hpp.js  benchmark_8hpp_source.html  benchmarks_2matrix_8cpp.html  benchmarks_2matrix_8cpp.js  benchmarks_2vector_8cpp.html  benchmarks_2vector_8cpp.js  build  build.sh  citelist.html  classes.html  classlucid_1_1CornellBox-members.html  classlucid_1_1CornellBox.html  classlucid_1_1CornellBox.js  classlucid_1_1CornellBox_1_1MatGetter-members.html  classlucid_1_1CornellBox_1_1MatGetter.html  classlucid_1_1CornellBox_1_1MatGetter.js  classlucid_1_1CornellBox_1_1MatGetter__coll__graph.map  classlucid_1_1CornellBox_1_1MatGetter__coll__graph.md5  (+1045 more)
cmake/: Checks.cmake  Clang.cmake  CxxFeatures.cmake
doc/: mainpage.md
doc/bib/: Duff2017Basis.bib  LD04ERQIT_citation.bib  other.bib
doc/bib/auto/: other.el
logs/Intel_R_Core_TM_i7_2670QM_CPU_2_20GHz/: matrix.csv  vector.csv
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+100 more)
src/: CMakeLists.txt  lucid.cpp  main.cpp
src/base/: arrayview.hpp  intersection.hpp  math.hpp  matrix.hpp  matrix_ops.hpp  normal.hpp  point.hpp  ray.hpp  rng.hpp  static_span.hpp  transforms.hpp  types.hpp  vector.hpp  vector_operators.hpp  vector_ops.hpp
src/benchmarks/: CMakeLists.txt  benchmark.hpp  matrix.cpp  mp_cornell_box_mc.cpp  primitives.cpp  transforms.cpp  vector.cpp
src/cameras/: abstract_camera.hpp  perspective.cpp  perspective.h  perspective.hpp  utils.hpp
src/core/: arrayview.hpp  basic_types.hpp  intersection.hpp  mat.hpp  mat_ops.hpp  math.hpp  misc.hpp  pi.hpp  primitive.hpp  range.hpp  ray.hpp  rng.hpp  transforms.hpp  types.hpp  vec.hpp  vec_ops.hpp
src/core/geo/: bbox.cpp  bbox.hpp  disk.cpp  disk.hpp  intersection.hpp  plane.cpp  plane.hpp  primitive.hpp  ray.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/core/math/: transforms.cpp  transforms.hpp
src/core/random/: rng.cpp  rng.hpp
src/gui/: viewport.hpp
src/image/: CMakeLists.txt  image.hpp  io.cpp  io.hpp
src/image_reconstruction/: film.hpp  filtering.hpp
src/integrators/: basic.hpp
src/io/: CMakeLists.txt  film.cpp  film.h  image.cpp  image.h  image.hpp
src/primitives/: aabb.hpp  disk.hpp  generic.hpp  generic_primitive.hpp  plane.cpp  plane.hpp  primitives.hpp  quad.hpp  sphere.hpp  transforms.hpp  triangle.hpp
src/ray_traversal/: ray_traversal.hpp  transforms.hpp
src/ray_traversal/primitives/: aabb.hpp  disk.hpp  generic.hpp  quad.hpp  sphere.hpp  triangle.hpp
src/sampling/: common.hpp  film.hpp
src/scene/: abstract_object.hpp  cornell_box.hpp  geometry_object.cpp  geometry_object.hpp  material.cpp  material.hpp  omni_light.cpp  omni_light.hpp  scene.cpp  scene.hpp  traverser.cpp  traverser.hpp
src/structures/: geometry_pull.cpp  geometry_pull.h  triangle_mesh.cpp  triangle_mesh.h  triangle_mesh.hpp
src/templates/math/: mat.hpp  mat_ops.hpp  matrix.hpp  pi.hpp  vec.hpp  vec_ops.hpp
src/templates/utils/: debug.hpp  iter_small.hpp  misc.hpp
src/tests/: CMakeLists.txt  aabb.cpp  argparser.cpp  disk.cpp  dispatcher.cpp  filtering.cpp  functional.cpp  generic_primitive.cpp  image.cpp  imgui_example.cpp  literal.cpp  matrix.cpp  metalist.cpp  normal.cpp  perspective_camera.cpp  plane.cpp  primitives.cpp  property_test.hpp  quad.cpp  ray.cpp  repeat.cpp  rng.cpp  sphere.cpp  static_span.cpp  steady_tuple.cpp  struct_binding.cpp  test_pi.cpp  test_util.hpp  transforms.cpp  triangle.cpp  vec3.cpp  vec4.cpp  vector.cpp  viewport.cpp
src/traversal/: aabb.hpp  disk.hpp  generic.hpp  intersection.hpp  plane.hpp  quad.hpp  ray.hpp  sphere.hpp  triangle.hpp
src/utils/: argparse.hpp  debug.hpp  dispatcher.hpp  exceptions.hpp  functional.hpp  identity.hpp  intlist.hpp  logging.hpp  math.hpp  printing.hpp  range.hpp  seq.hpp  static_span.hpp  steady_tuple.hpp  timer.hpp  tuple.hpp  typeinfo.hpp  typelist.hpp
